package com.handmade.ecommerce.payment.model;

import jakarta.persistence.*;
import lombok.Getter;
import lombok.Setter;
import org.chenile.jpautils.entity.BaseJpaEntity;

import java.math.BigDecimal;

/**
 * Payment Order Entity
 * Represents a single payment to one seller
 * 
 * Key Design Points (from Alex Xu):
 * - id is the idempotency key (generated by frontend)
 * - paymentEventId links to parent PaymentEvent
 * - status tracks execution state
 * - walletUpdated and ledgerUpdated ensure consistency
 */
@Entity
@Table(name = "hm_payment_order")
@Setter
@Getter
public class PaymentOrder extends BaseJpaEntity {

    /**
     * Payment Event ID (FK to PaymentEvent)
     * Groups all payment orders for a single checkout
     */
    @Column(name = "payment_event_id", nullable = false)
    private String paymentEventId;

    /**
     * Seller receiving this payment
     */
    @Column(name = "seller_id", nullable = false)
    private String sellerId;

    /**
     * Payment amount
     * Using BigDecimal for precision
     */
    @Column(precision = 19, scale = 4, nullable = false)
    private BigDecimal amount;

    /**
     * Currency code (ISO 4217)
     * Examples: INR, USD, EUR
     */
    @Column(length = 3, nullable = false)
    private String currency;

    /**
     * Payment order status
     * NOT_STARTED → EXECUTING → SUCCESS/FAILED
     */
    @Enumerated(EnumType.STRING)
    @Column(name = "payment_order_status", nullable = false)
    private PaymentOrderStatus paymentOrderStatus = PaymentOrderStatus.NOT_STARTED;

    /**
     * PSP name (RAZORPAY, STRIPE, etc.)
     */
    @Column(name = "psp_name", length = 50)
    private String pspName;

    /**
     * PSP reference/token ID
     * Returned by PSP after successful payment
     */
    @Column(name = "psp_reference_id")
    private String pspReferenceId;

    /**
     * Whether wallet has been updated
     * Used for reconciliation
     */
    @Column(name = "wallet_updated", nullable = false)
    private Boolean walletUpdated = false;

    /**
     * Whether ledger has been updated
     * Used for reconciliation
     */
    @Column(name = "ledger_updated", nullable = false)
    private Boolean ledgerUpdated = false;

    /**
     * Retry count for failed payments
     * Used by retry mechanism
     */
    @Column(name = "retry_count", nullable = false)
    private Integer retryCount = 0;

    /**
     * Last error message (if failed)
     * Helps with debugging
     */
    @Column(name = "last_error", length = 1000)
    private String lastError;
}