@startuml Payment System Entity Relationship Diagram

!define PRIMARY_KEY <b><color:blue>PK</color></b>
!define FOREIGN_KEY <b><color:green>FK</color></b>

' Core Payment Flow Entities
entity "PaymentEvent" as payment_event {
  PRIMARY_KEY id : UUID
  --
  checkout_id : String
  buyer_id : String
  total_amount : Decimal
  currency : String
  status : Enum
  * NOT_STARTED
  * EXECUTING
  * SUCCESS
  * FAILED
  --
  created_at : Timestamp
  updated_at : Timestamp
}

entity "PaymentOrder" as payment_order {
  PRIMARY_KEY payment_order_id : UUID
  --
  FOREIGN_KEY payment_event_id : UUID
  seller_id : String
  amount : Decimal
  currency : String
  payment_order_status : Enum
  * NOT_STARTED
  * EXECUTING
  * SUCCESS
  * FAILED
  psp_name : String (RAZORPAY, STRIPE)
  psp_reference_id : String
  wallet_updated : Boolean
  ledger_updated : Boolean
  --
  created_at : Timestamp
  updated_at : Timestamp
}

' Double-Entry Ledger
entity "LedgerEntry" as ledger {
  PRIMARY_KEY id : UUID
  --
  transaction_id : UUID
  FOREIGN_KEY payment_order_id : UUID
  account_id : String
  account_type : Enum
  * BUYER
  * SELLER
  * PLATFORM
  entry_type : Enum
  * DEBIT
  * CREDIT
  amount : Decimal
  currency : String
  description : String
  --
  created_at : Timestamp
}

' Wallet System
entity "Wallet" as wallet {
  PRIMARY_KEY id : UUID
  --
  user_id : String
  user_type : Enum
  * SELLER
  * BUYER
  * PLATFORM
  balance : Decimal
  currency : String
  status : Enum
  * ACTIVE
  * FROZEN
  * CLOSED
  --
  created_at : Timestamp
  updated_at : Timestamp
}

entity "WalletTransaction" as wallet_txn {
  PRIMARY_KEY id : UUID
  --
  FOREIGN_KEY wallet_id : UUID
  FOREIGN_KEY payment_order_id : UUID
  transaction_type : Enum
  * CREDIT
  * DEBIT
  * REFUND
  * WITHDRAWAL
  amount : Decimal
  balance_before : Decimal
  balance_after : Decimal
  description : String
  --
  created_at : Timestamp
}

' Reconciliation System
entity "Reconciliation" as reconciliation {
  PRIMARY_KEY id : UUID
  --
  reconciliation_date : Date
  psp_name : String
  settlement_file_path : String
  total_transactions : Integer
  total_amount : Decimal
  matched_count : Integer
  unmatched_count : Integer
  status : Enum
  * PENDING
  * COMPLETED
  * FAILED
  --
  created_at : Timestamp
  updated_at : Timestamp
}

entity "ReconciliationMismatch" as mismatch {
  PRIMARY_KEY id : UUID
  --
  FOREIGN_KEY reconciliation_id : UUID
  FOREIGN_KEY payment_order_id : UUID
  mismatch_type : Enum
  * AMOUNT_MISMATCH
  * MISSING_TRANSACTION
  * STATUS_MISMATCH
  * DUPLICATE_TRANSACTION
  our_amount : Decimal
  psp_amount : Decimal
  classification : Enum
  * AUTOMATED
  * MANUAL
  * UNCLASSIFIED
  resolution_status : Enum
  * PENDING
  * RESOLVED
  * ESCALATED
  resolution_notes : Text
  resolved_by : String
  resolved_at : Timestamp
  --
  created_at : Timestamp
}

' Retry Queue System
entity "PaymentRetry" as retry {
  PRIMARY_KEY id : UUID
  --
  FOREIGN_KEY payment_order_id : UUID
  retry_count : Integer
  max_retries : Integer
  next_retry_at : Timestamp
  retry_strategy : Enum
  * IMMEDIATE
  * FIXED_INTERVAL
  * EXPONENTIAL_BACKOFF
  error_code : String
  error_message : Text
  status : Enum
  * PENDING
  * RETRYING
  * EXHAUSTED
  * RESOLVED
  --
  created_at : Timestamp
  updated_at : Timestamp
}

' Bank Verification (Existing)
entity "BankVerification" as bank_verification {
  PRIMARY_KEY id : UUID
  --
  seller_id : String
  account_number : String
  ifsc_code : String
  routing_number : String
  account_holder_name : String
  bank_name : String
  country_code : String
  provider_name : String
  reference_id : String
  status : Enum
  verification_method : String
  verified_at : Timestamp
  --
  created_at : Timestamp
  updated_at : Timestamp
}

' Relationships
payment_event ||--o{ payment_order : "contains"
payment_order ||--o{ ledger : "creates"
payment_order ||--o| wallet_txn : "updates"
wallet ||--o{ wallet_txn : "has"
payment_order ||--o| retry : "may retry"
reconciliation ||--o{ mismatch : "identifies"
mismatch }o--|| payment_order : "references"

' Notes
note right of payment_event
  **Purpose**: Groups related payments
  from a single checkout
  
  **Example**: 
  Buyer purchases from 3 sellers
  → 1 PaymentEvent
  → 3 PaymentOrders
end note

note right of payment_order
  **Purpose**: Individual payment to ONE seller
  
  **Key Fields**:
  • payment_order_id = Idempotency Key
  • psp_reference_id = Token from PSP
  • wallet_updated = Seller balance updated?
  • ledger_updated = Accounting recorded?
end note

note right of ledger
  **Purpose**: Double-Entry Accounting
  
  **Rule**: Sum of all entries MUST = 0
  
  **Example**:
  Payment of $100:
  • DEBIT $100 from Buyer
  • CREDIT $100 to Seller
  Sum: -100 + 100 = 0 ✅
end note

note right of wallet
  **Purpose**: Current account balance
  
  **Fast Queries**:
  • "What's seller's balance?"
  • "Can seller withdraw $500?"
  • "Freeze suspicious account"
end note

note right of wallet_txn
  **Purpose**: Complete transaction history
  
  **Audit Trail**:
  • Every balance change recorded
  • Can recalculate balance from history
  • Dispute resolution
end note

note right of reconciliation
  **Purpose**: Daily verification with PSP
  
  **Process**:
  1. PSP sends settlement file
  2. Compare with our records
  3. Identify mismatches
  4. Create mismatch records
end note

note right of mismatch
  **Purpose**: Track discrepancies
  
  **Classifications**:
  • AUTOMATED: Known issue, auto-fix
  • MANUAL: Needs human review
  • UNCLASSIFIED: Investigation needed
end note

note right of retry
  **Purpose**: Automatic failure recovery
  
  **Strategies**:
  • IMMEDIATE: Retry now
  • FIXED_INTERVAL: Wait 5s
  • EXPONENTIAL_BACKOFF: 1s, 2s, 4s, 8s...
end note

@enduml
